@@ -47,3 +47,5 @@ v1.4.1
 
 Next version
 -Added: Inproved compatibility with Thaumcraft (all items have aspects, and cooking blaze mesh on the infernal furnace gives you nuggets)
+-Added: Sceptres are now enchantable (with unbreaking and repair(thaumcraft 4))
+-Change: Sceptres now will work on mobs from other mods (not all mobs, depends on how the modder made his mob, if it doesn't work with some mob that isn't from vanilla mc, don't bother reporting it to me. There's nothing I can do). 
